# ServerTemplate

./: .gitmodules  CMakeLists.txt  MainListener.cpp  README.md  main.cpp
src/: EntityRequestHandlerFactory.cpp  EntityRequestHandlerFactory.h  MessageAdder.cpp  MessageGetter.cpp  MessagesQueue.cpp  MessagesQueue.h  PingHandler.cpp  PingHandler.h
